youfull/objects/Landing_Page_Config__c.object
<CustomObject>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Landing Page Config</relationshipLabel>
        <relationshipName>Landing_Page_Config</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title_Level_Number__c</fullName>
        <label>Title Level Number</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>User_Type__c</fullName>
        <label>User Type</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avon Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avon Zone Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avon Division Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Administrator</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Landing Page Config</label>
    <nameField>
        <label>Landing Page Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Landing Page Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>